[workspace]

members = [
    "monoio-server",
    "tokio-server",
    "tokio-uring-server",
    "glommio-server",
    "client",
    "config"
]

[workspace.dependencies]
monoio = { version = "0.0" }
tokio-uring = { version = "0.4" }

[profile.release]
lto = true
debug = false
overflow-checks = false
